--- a/index.html
+++ b/index.html
@@ -8,18 +8,36 @@
   </head>
   <body>
     <div class="main">
-      <nav style="background-color: red">
+      <nav>
         <span>
           <img width="73" src="assests/img/Netflix-Logo.wine.svg" alt=""
         /></span>
 
-        <div  >
-          <button>English</button>
-          <button>Sign In</button>
+        <div>
+          <button  class="btn">English</button class="btn">
+          <button class="btn-red-sm">Sign In</button class="btn">
         </div>
       </nav>
 
       <div class="box"></div>
+
+      <div class="hero">
+        <span>Unlimited movies, </span>
+        <span> TV shows, and more </span>
+        <span> Starts at USD 2.99. Cancel anytime.</span>
+        <span>
+          Ready to watch? Enter your email to create or restart your
+          membership.</span
+        >
+        <div class="hero-buttons">
+          <input type="text" placeholder="Email address" />
+          <button class="btn-red">Get Started &gt</button class="btn">
+        </div>
+        <div class="separation"></div>
+      </div>
+      
     </div>
+
+
   </body>
 </html>
